# dsol_pangolin

./: .gitignore  CMakeLists.txt  README.md  result.txt
example/: dsol_stereo_kitti.cpp
sv/dsol/: adjust.cpp  adjust.h  adjust_play.cpp  align.cpp  align.h  align_play.cpp  camera.cpp  camera.h  camera_test.cpp  direct.cpp  direct.h  direct_test.cpp  extra.cpp  extra.h  frame.cpp  frame.h  frame_test.cpp  hessian.cpp  hessian.h  hessian_test.cpp  image.cpp  image_test.cpp  node_data.cpp  node_odom.cpp  node_util.cpp  node_util.h  odom.cpp  odom.h  odom_play.cpp  pixel_test.cpp  point.cpp  point.h  point_test.cpp  select.cpp  select.h  select_play.cpp  select_test.cpp  solve.cpp  solve.h  solve_test.cpp  (+12 more)
sv/ros1/: msg_conv.cpp
sv/util/: cmap.cpp  cmap_test.cpp  dataset.cpp  dataset.h  dataset_play.cpp  eigen.cpp  eigen_test.cpp  grid2d_test.cpp  math.cpp  math.h  math_test.cpp  metric.cpp  metric_test.cpp  ocv.cpp  ocv_test.cpp  summary.cpp  summary.h  tbb_test.cpp
